  * Added frequency keywords to the integer delay-and-sum beamformer functions
  * Fixed a problem with the beam power pattern measured by lsl.misc.beamformer.intBeamShape
  * Overhaul of the lsl.common.sdf module to address Ticket #40 (OBS_DRX_GAIN problem) and to improve the render
  * Removed jinja2 as a dependency
  * Fixed a bug in lsl.common.sdf dealing with parsing LST times

0.6.1
  * Added support for DROS metatags in the SESSION_SPC SDF keyword

0.6.0
  * Removed the correlator.fx.calcSpectra()/calcSpectrum() functions
  * Removed the lsl.common.warns module
  * Removed the LWAFS-specific modules since they are not needed for the new DROS v2
  * Updated the DR spectrometer reader (lsl.reader.drpsec) for the new DROS v2

0.5.5
  * Added in the pointing correction rotation code to lsl.common.mcs as applyPointingCorrecton()
  * Made the visibility simulations consistent with the output of lsl.correlator.fx.FXMaster()
  * Added a new lsl.writer.fitsidi.ExtendedIDI class to deal with more than 255 antennas
  * Updated lsl.imaging.utils to deal with the new ExtendedIDI class
  * Added in the self-calibration routines to lsl.imaging.selfCal
  * Updated the LWA1 and LWA2 SSMIFs
  * Fixed the observatory/instrument specific header values in lsl.writer.fitsidi so that they reflect the different sites
  * Updated lsl.misc.dedispersion.coherent() to deal with the padding better

0.5.4
  * Switched over to transparent compression in the lsl.common.metabundle functions
  * Added support for '/' seperated YYYY/MM/DD in lsl.common.sdf.parseTimeString()
  * Removed the 'return' values from the _gofast module import call
  * Various cleanups in the C extentions to remove compile time warnings
  * Tweaked the splitDRX.py script to be more robust
  * Added support for libnova version 0.15.0
  * Improved support for STEPPED observations in lsl.common.sdf
  * Made the TBW read-out duration calculation consistent with the current version of MCS